--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,9 @@
 <%- include('partials/header') %>
 
-    <div id="main">
-        <h1>Index</h1>
+    <div class="main test">
+        <h1>Velkommen til Bloggmaskinen!</h1>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis iusto aspernatur animi repudiandae architecto accusantium veniam tempora quaerat, eaque nobis totam itaque optio inventore consequatur magnam dolorum laboriosam minima laudantium. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel consectetur fugiat quo unde animi, iste nihil? Eligendi officia aspernatur molestias delectus nostrum quaerat eum reiciendis quae natus? Atque, voluptatem dolores. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse natus, laborum nemo ab vero adipisci, vitae aliquid eum minus dignissimos necessitatibus reprehenderit deleniti dolores at tempore soluta ex temporibus earum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro exercitationem molestias animi, dolorum perspiciatis inventore doloribus necessitatibus voluptas velit odio corrupti asperiores iste aliquid? Impedit dolores iusto maxime commodi officia? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto voluptates aspernatur voluptate eius libero, eveniet quasi tempora quaerat veritatis officiis rem magnam blanditiis illo ea dolorum neque minima, nulla inventore! Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae reiciendis fugiat nihil facilis aut ipsa adipisci voluptatum debitis qui labore exercitationem architecto obcaecati error consequuntur molestias, et nostrum praesentium totam.</p>
     </div>
 
 <%- include('partials/footer') %>
