--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %> - Node Skallprosjekt</title>
+    <title><%= title %> - Bloggmaskinen</title>
+    <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
 
     <nav>
         <ul>
-            <li><a href="/">Index</a></li>
+            <li><a href="/">Hjem</a></li>
         </ul>
     </nav>
