--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,46 @@
 nav {
-    background: #eeeeee;
+    background: #eee;
+}
+
+nav.mainNav {
     position: fixed;
     width: 100%;
     top: 0px;
     left: 0px;
+}
+
+nav.mainNav li {
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.rightNav {
+    position: absolute !important;
+    right: 5px;
+    border: none;
+    cursor: pointer;
+}
+
+.rightNav:hover {
+    background: #eee;
+}
+
+img.rightNav {
+    width: 17px;
+}
+
+.burgerNav {
+    position: absolute;
+    right: 5px;
+    top: 60px;
+    border: 2px solid black;
+    border-radius: 4px;
+    width: 110px;
+}
+
+.burgerNav li {
+    margin-bottom: 5px;
+    margin-left: 5px;
 }
 
 .main {
@@ -16,4 +53,8 @@ nav {
 
 .test {
     margin-bottom: 10000px;
+}
+
+.hidden {
+    display: none !important;
 }
