--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,6 +1,8 @@
 <%- include('partials/header') %>
 
-    <h1>404 - OOPS, couldn't find the page you were looking for</h1>
-    <a href="/">Take me back</a>
+    <div class="main">
+        <h1>404 - OOPS, couldn't find the page you were looking for</h1>
+        <a href="/">Take me back</a>
+    </div>
 
 <%- include('partials/footer') %>
