Logg inn & lag bruker sider

--- a/views/blogger.ejs
+++ b/views/blogger.ejs
@@ -5,7 +5,7 @@
 
     <div class="main">
         <!-- popup blogg -->
-        <div class="popupBlogg">
+        <div class="popupBlogg hidden">
             <h1>Bloggens tittel</h1>
             <h2>Av: <span class="forfatter">Forfatter</span></h2>
             <p class="commentsText">Kommentarer:</p>
@@ -41,7 +41,7 @@
         </div>
 
         <!-- alle blogger -->
-        <div class="blogg hidden">
+        <div class="blogg">
             <h1><a href="/blogger/?id=bloggID">Bloggens tittel</a></h1>
             <h2>Av: <span class="forfatter">Forfatter</span></h2>
             <div class="innledning">
