--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,12 +16,12 @@
             <li><a href="/blogger">Blogger</a></li>
             <button class="rightNav burgerButton"><img class="rightNav" src="/img/bars-solid.png"></button>
             <nav class="burgerNav hidden">
-                <% if (true) { %>
+                <% if (false) { %>
                     <li><a href="/profil">Min profil</a></li>
                 <% } else { %>
                     <li><a href="/logg-inn">Logg inn</a></li>
                 <% } %>
-                <li><a href="#">Andre profiler</a></li>
+                <li><a href="/profiler">Andre profiler</a></li>
             </nav>
         </ul>
     </nav>
