--- a/views/lag-bruker.ejs
+++ b/views/lag-bruker.ejs
@@ -12,12 +12,15 @@
             <input type="text" name="username" id="username">
 
             <label for="password">Passord:</label>
-            <input type="text" name="password" id="password">
+            <input type="password" name="password" id="password">
 
             <button type="submit">Opprett bruker</button>
         </form>
 
         <br><a href="/logg-inn">Har du allerede en bruker? Logg inn her.</a>
     </div>
+
+    <!-- scripts -->
+    <script src="/js/lag-bruker.js" defer></script>
 
 <%- include('partials/footer') %>
