--- a/views/logg-inn.ejs
+++ b/views/logg-inn.ejs
@@ -8,9 +8,6 @@
             <label for="email">Email:</label>
             <input type="text" name="email" id="email">
 
-            <label for="username">Brukernavn:</label>
-            <input type="text" name="username" id="username">
-
             <label for="password">Passord:</label>
             <input type="password" name="password" id="password">
 
@@ -19,5 +16,8 @@
 
         <br><a href="/lag-bruker">Mangler du en bruker? Lag den her.</a>
     </div>
+
+    <!-- script -->
+    <script src="/js/logg-inn.js" defer></script>
 
 <%- include('partials/footer') %>
